--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,9 @@
     "react": "19.2.0",
     "react-datepicker": "^8.8.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.0",
     "react-select": "^5.10.2",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
