--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=backend
 
-
-spring.data.mongodb.uri=mongodb+srv://rohithmohan2000s:Atlas%25rm@cluster0.bc7yput.mongodb.net/facility-room-booking?retryWrites=true&w=majority&appName=Cluster0
+# use environment variable
+spring.data.mongodb.uri=${MONGO_URI}
+server.port=${PORT:8080}
