--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=backend
 # use environment variable
 spring.data.mongodb.uri=${MONGO_URI}
 server.port=${PORT:8080}
+jwt.secret = ${JWT_SECRET}
