--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation 'io.mongock:mongock-springboot-v3:5.4.2'
+    implementation 'io.mongock:mongodb-springdata-v4-driver:5.4.2'
+    implementation 'io.mongock:mongock-bom:5.3.2'
 }
 
 tasks.named('test') {
